--- a/static/scss/app.scss
+++ b/static/scss/app.scss
@@ -266,7 +266,8 @@
     &.main-container {
         display: block;
         float: right;
-        overflow-y: hidden;
+        overflow-y: scroll;
+        max-height: 100vh;
         width: calc(1050px*var(--deltaW));
     }
     &.chosen {
