--- a/templates/app.html
+++ b/templates/app.html
@@ -6,6 +6,8 @@
     <script type="text/javascript" src="/static/js/metrika.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js" integrity="sha512-aMGMvNYu8Ue4G+fHa359jcPb1u+ytAF+P2SCb+PxrjCdO3n3ZTxJ30zuH39rimUggmTwmh2u7wvQsDTHESnmfQ==" crossorigin="anonymous"></script>
+    <link href="/static/clusterize.css" rel="stylesheet">
+    <script src="/static/js/clusterize.min.js"></script>
     <link rel="stylesheet" href="/static/index.css" />
     <link rel="icon" href="/static/images/spotifier-logo.svg" />
     <meta name="theme-color" content="#000000" />
@@ -87,9 +89,9 @@
         </div>
         <img src="/static/images/spotifier-logo.svg" class="app spotifier-logo">
     </div>
-    <div class="app main-container">
-        <div class="app chosen option">{chosen}: 0</div>
-        <div class="app chosen count">{{ _('Выбрано') }}: 0</div>
+    <div id="scrollArea" class="app main-container clusterizeScroll">
+        <div class="app chosen option">{chosen}: <strong>0</strong></div>
+        <div class="app chosen count">{{ _('Выбрано') }}: <strong>0</strong></div>
         <div class="app chosen add non-selectable">{{ _('Добавить')}} {chosen}</div>
         <div class="app chosen transfer non-selectable">{{ _('Перенести')}} {chosen}</div>
         <div class="app song top-part">
@@ -100,6 +102,9 @@
             <div class="app song top-part option2">{{ _('Альбом') }}</div>
             <div class="app song top-part change">{{ _('Изменить') }}</div>
             <div class="app song top-part delete">{{ _('Удалить') }}</div>
+        </div>
+        <div id="contentArea" class="app song-container clusterizeContent">
+
         </div>
     </div>
     <div class="app popup">
