Выбор треков, удаление треков, сохранение помеченности треков при переходе между типами аудио, сохранение помеченности треков при их добавлении

--- a/static/scss/app.scss
+++ b/static/scss/app.scss
@@ -280,6 +280,10 @@
             height: calc(40px*var(--deltaH));
             margin: calc(112px*var(--deltaH)) calc(80px*var(--deltaW)) 0 0;
         }
+        &.chosen>strong {
+            width: 10px;
+            display: inherit;
+        }
         &.option::first-letter {
             text-transform: uppercase;
         }
