--- a/static/index.css
+++ b/static/index.css
@@ -513,6 +513,10 @@ body {
   height: calc(40px * var(--deltaH));
   margin: calc(112px * var(--deltaH)) calc(80px * var(--deltaW)) 0 0;
 }
+.app.chosen.chosen > strong {
+  width: 10px;
+  display: inherit;
+}
 .app.chosen.option::first-letter {
   text-transform: uppercase;
 }
